# sam-wrapper

./: .gitignore  Cargo.toml  Dockerfile  data-transformation.md  local-docker-dev.ps1  local-docker-dev.sh  test.sh
.github/workflows/: release_wasm_fdw.yml
src/: lib.rs
wit/: world.wit
