[package]
name = "sam_fdw"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = "debuginfo"
lto = true

[dependencies]
wit-bindgen-rt = "0.26.0"
csv = "1.3"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"

[package.metadata.component]
package = "neely-innovations:sam-fdw"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"supabase:wrappers" = { path = "./supabase-wrappers-wit" }
